# deft-vue-examples

system-info/: .gitignore  Cargo.toml  README.md  dev-hack.js  package-lock.json  package.json  rspack.config.js  tsconfig.json
system-info/android/: settings.gradle
system-info/android/app/: build.gradle
system-info/src/: main.rs
system-info/ui/: App.vue  deft-env.d.ts  main.ts
system-info/ui/components/: logo.vue
