[package]
name = "system-info"
version = "0.1.0"
edition = "2021"

[dependencies]
deft = "0.4.1"
serde = "1.0.219"
sysinfo = "0.34.1"

[build-dependencies]
deft-build = { version = "0.2.0" }

[features]
tray = ["deft/tray"]
x11 = ["deft/x11"]
wayland = ["deft/wayland"]

[lib]
name = "deftapp"
path = "src/main.rs"
crate-type=["cdylib"]
